--- a/style.css
+++ b/style.css
@@ -244,6 +244,14 @@ h5{
     font-weight: bolder;
 }
 
+.spinner {
+    width: 40px;
+    height: 40px;
+    border: 4px #ddd solid;
+    border-top: 4px #2e93e6 solid;
+    border-radius: 50%;
+    animation: sp-anime 0.8s infinite linear;
+}
 
 @font-face {
     font-family: aclonica;
